# wxStudy

./: .gitignore  README.md
1_Hello/: CMakeLists.txt  hello.cpp
2_Basic/: CMakeLists.txt
2_Basic/include/: MyFrame.h
2_Basic/src/: MyFrame.cpp  main.cpp
config/vscode/win_msvc/: c_cpp_properties.json
